deploy: 5f9f61866d831ffa41245ac8fccd604f80b2792b

--- a/examples/example04_package_comparison.ipynb
+++ b/examples/example04_package_comparison.ipynb
@@ -29,10 +29,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:07:02.911318Z",
-     "iopub.status.busy": "2025-07-24T18:07:02.911069Z",
-     "iopub.status.idle": "2025-07-24T18:07:03.884954Z",
-     "shell.execute_reply": "2025-07-24T18:07:03.884383Z"
+     "iopub.execute_input": "2025-07-25T09:42:26.960926Z",
+     "iopub.status.busy": "2025-07-25T09:42:26.960672Z",
+     "iopub.status.idle": "2025-07-25T09:42:27.896108Z",
+     "shell.execute_reply": "2025-07-25T09:42:27.895574Z"
     }
    },
    "outputs": [
@@ -72,10 +72,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:07:03.886753Z",
-     "iopub.status.busy": "2025-07-24T18:07:03.886503Z",
-     "iopub.status.idle": "2025-07-24T18:07:04.206248Z",
-     "shell.execute_reply": "2025-07-24T18:07:04.205675Z"
+     "iopub.execute_input": "2025-07-25T09:42:27.897839Z",
+     "iopub.status.busy": "2025-07-25T09:42:27.897584Z",
+     "iopub.status.idle": "2025-07-25T09:42:28.205609Z",
+     "shell.execute_reply": "2025-07-25T09:42:28.205026Z"
     }
    },
    "outputs": [
@@ -104,10 +104,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:07:04.207917Z",
-     "iopub.status.busy": "2025-07-24T18:07:04.207751Z",
-     "iopub.status.idle": "2025-07-24T18:07:04.350100Z",
-     "shell.execute_reply": "2025-07-24T18:07:04.349501Z"
+     "iopub.execute_input": "2025-07-25T09:42:28.207269Z",
+     "iopub.status.busy": "2025-07-25T09:42:28.207093Z",
+     "iopub.status.idle": "2025-07-25T09:42:28.345069Z",
+     "shell.execute_reply": "2025-07-25T09:42:28.344424Z"
     }
    },
    "outputs": [
@@ -145,10 +145,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:07:04.351769Z",
-     "iopub.status.busy": "2025-07-24T18:07:04.351604Z",
-     "iopub.status.idle": "2025-07-24T18:07:04.748341Z",
-     "shell.execute_reply": "2025-07-24T18:07:04.747850Z"
+     "iopub.execute_input": "2025-07-25T09:42:28.346773Z",
+     "iopub.status.busy": "2025-07-25T09:42:28.346568Z",
+     "iopub.status.idle": "2025-07-25T09:42:28.740425Z",
+     "shell.execute_reply": "2025-07-25T09:42:28.739826Z"
     }
    },
    "outputs": [
@@ -193,10 +193,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:07:04.750017Z",
-     "iopub.status.busy": "2025-07-24T18:07:04.749847Z",
-     "iopub.status.idle": "2025-07-24T18:07:05.040501Z",
-     "shell.execute_reply": "2025-07-24T18:07:05.039931Z"
+     "iopub.execute_input": "2025-07-25T09:42:28.742090Z",
+     "iopub.status.busy": "2025-07-25T09:42:28.741918Z",
+     "iopub.status.idle": "2025-07-25T09:42:29.029257Z",
+     "shell.execute_reply": "2025-07-25T09:42:29.028638Z"
     }
    },
    "outputs": [
@@ -361,10 +361,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:07:05.042109Z",
-     "iopub.status.busy": "2025-07-24T18:07:05.041948Z",
-     "iopub.status.idle": "2025-07-24T18:07:05.044449Z",
-     "shell.execute_reply": "2025-07-24T18:07:05.043867Z"
+     "iopub.execute_input": "2025-07-25T09:42:29.031049Z",
+     "iopub.status.busy": "2025-07-25T09:42:29.030875Z",
+     "iopub.status.idle": "2025-07-25T09:42:29.033329Z",
+     "shell.execute_reply": "2025-07-25T09:42:29.032868Z"
     }
    },
    "outputs": [],
@@ -378,10 +378,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:07:05.045891Z",
-     "iopub.status.busy": "2025-07-24T18:07:05.045743Z",
-     "iopub.status.idle": "2025-07-24T18:07:05.048537Z",
-     "shell.execute_reply": "2025-07-24T18:07:05.048063Z"
+     "iopub.execute_input": "2025-07-25T09:42:29.034786Z",
+     "iopub.status.busy": "2025-07-25T09:42:29.034613Z",
+     "iopub.status.idle": "2025-07-25T09:42:29.037362Z",
+     "shell.execute_reply": "2025-07-25T09:42:29.036910Z"
     }
    },
    "outputs": [],
@@ -438,10 +438,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:07:05.050010Z",
-     "iopub.status.busy": "2025-07-24T18:07:05.049839Z",
-     "iopub.status.idle": "2025-07-24T18:07:06.420139Z",
-     "shell.execute_reply": "2025-07-24T18:07:06.419622Z"
+     "iopub.execute_input": "2025-07-25T09:42:29.038835Z",
+     "iopub.status.busy": "2025-07-25T09:42:29.038655Z",
+     "iopub.status.idle": "2025-07-25T09:42:30.190401Z",
+     "shell.execute_reply": "2025-07-25T09:42:30.189919Z"
     }
    },
    "outputs": [
@@ -459,7 +459,7 @@
      "text": [
       "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"LD_LIBRARY_PATH\" redefined by R and overriding existing variable. Current: \"/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib\", R: \"/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib\"\n",
       "  warnings.warn(\n",
-      "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"R_SESSION_TMPDIR\" redefined by R and overriding existing variable. Current: \"/tmp/RtmpbAElzz\", R: \"/tmp/RtmpZGNk8o\"\n",
+      "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"R_SESSION_TMPDIR\" redefined by R and overriding existing variable. Current: \"/tmp/RtmpXzwkR2\", R: \"/tmp/RtmpzVGKZt\"\n",
       "  warnings.warn(\n"
      ]
     },
@@ -502,10 +502,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:07:06.421810Z",
-     "iopub.status.busy": "2025-07-24T18:07:06.421654Z",
-     "iopub.status.idle": "2025-07-24T18:07:06.830236Z",
-     "shell.execute_reply": "2025-07-24T18:07:06.829630Z"
+     "iopub.execute_input": "2025-07-25T09:42:30.192055Z",
+     "iopub.status.busy": "2025-07-25T09:42:30.191900Z",
+     "iopub.status.idle": "2025-07-25T09:42:30.593799Z",
+     "shell.execute_reply": "2025-07-25T09:42:30.593176Z"
     }
    },
    "outputs": [
@@ -585,10 +585,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:07:06.831865Z",
-     "iopub.status.busy": "2025-07-24T18:07:06.831693Z",
-     "iopub.status.idle": "2025-07-24T18:07:07.148072Z",
-     "shell.execute_reply": "2025-07-24T18:07:07.147437Z"
+     "iopub.execute_input": "2025-07-25T09:42:30.595567Z",
+     "iopub.status.busy": "2025-07-25T09:42:30.595353Z",
+     "iopub.status.idle": "2025-07-25T09:42:30.910758Z",
+     "shell.execute_reply": "2025-07-25T09:42:30.910181Z"
     }
    },
    "outputs": [
@@ -612,10 +612,10 @@
    "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:07:07.149777Z",
-     "iopub.status.busy": "2025-07-24T18:07:07.149618Z",
-     "iopub.status.idle": "2025-07-24T18:07:07.156631Z",
-     "shell.execute_reply": "2025-07-24T18:07:07.156154Z"
+     "iopub.execute_input": "2025-07-25T09:42:30.912369Z",
+     "iopub.status.busy": "2025-07-25T09:42:30.912200Z",
+     "iopub.status.idle": "2025-07-25T09:42:30.919907Z",
+     "shell.execute_reply": "2025-07-25T09:42:30.919303Z"
     }
    },
    "outputs": [
@@ -742,10 +742,10 @@
    "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:07:07.158097Z",
-     "iopub.status.busy": "2025-07-24T18:07:07.157930Z",
-     "iopub.status.idle": "2025-07-24T18:07:07.574972Z",
-     "shell.execute_reply": "2025-07-24T18:07:07.574325Z"
+     "iopub.execute_input": "2025-07-25T09:42:30.921800Z",
+     "iopub.status.busy": "2025-07-25T09:42:30.921605Z",
+     "iopub.status.idle": "2025-07-25T09:42:31.338755Z",
+     "shell.execute_reply": "2025-07-25T09:42:31.338122Z"
     }
    },
    "outputs": [
