run joss notebook from examples directory

--- a/docs/examples/example09_joss_paper.ipynb
+++ b/docs/examples/example09_joss_paper.ipynb
@@ -142,7 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"meteo.csv\", index_col=0, parse_dates=True)\n",
+    "df = pd.read_csv(\"data/CABAUW.csv\", index_col=0, parse_dates=True)\n",
     "prec = df[\"prec\"]\n",
     "evap = df[\"evap\"]\n",
     "surplusd = prec - evap\n",
@@ -231,7 +231,7 @@
     "\n",
     "axd[\"sp\"].set_xlim(pd.Timestamp(\"1990\"), pd.Timestamp(\"2020\"))\n",
     "\n",
-    "fig.savefig(\"figures/monthly_precipitation_surplus.png\", dpi=300, bbox_inches=\"tight\")"
+    "fig.savefig(\"../../paper/figures/monthly_precipitation_surplus.png\", dpi=300, bbox_inches=\"tight\")"
    ]
   },
   {
@@ -386,7 +386,7 @@
     ")\n",
     "axes_indicator(axd[\"norm\"], \"b\", 0.99, 0.02, ha=\"right\", va=\"bottom\")\n",
     "\n",
-    "fig.savefig(\"figures/surplus_fit_cdf.png\", dpi=300, bbox_inches=\"tight\")"
+    "fig.savefig(\"../../paper/figures/surplus_fit_cdf.png\", dpi=300, bbox_inches=\"tight\")"
    ]
   },
   {
@@ -425,7 +425,7 @@
     "ax.set_xlim(pd.Timestamp(\"1990\"), pd.Timestamp(\"2020\"))\n",
     "ax.set_ylabel(\"Z-score\")\n",
     "\n",
-    "ax.get_figure().savefig(\"figures/spei1.png\", dpi=300, bbox_inches=\"tight\")"
+    "ax.get_figure().savefig(\"../../paper/figures/spei1.png\", dpi=300, bbox_inches=\"tight\")"
    ]
   },
   {
@@ -467,7 +467,7 @@
     "ax.xaxis.set_minor_locator(mpl.dates.YearLocator(1))\n",
     "ax.xaxis.set_major_locator(mpl.dates.YearLocator(2))\n",
     "ax.set_xlim(pd.Timestamp(\"1990\"), pd.Timestamp(\"2020\"))\n",
-    "ax.get_figure().savefig(\"figures/spei_heatmap.png\", dpi=300, bbox_inches=\"tight\")"
+    "ax.get_figure().savefig(\"../../paper/figures/spei_heatmap.png\", dpi=300, bbox_inches=\"tight\")"
    ]
   },
   {
@@ -517,7 +517,7 @@
     "ax.set_ylabel(\"Precipitation\\nsurplus (mm)\")\n",
     "ax.legend(ncol=3, loc=(0, 1), frameon=False)\n",
     "# ax.set_ylim(-150.0, 175.0)\n",
-    "fig.savefig(\"figures/threshold.png\", dpi=300, bbox_inches=\"tight\")"
+    "fig.savefig(\"../../paper/figures/threshold.png\", dpi=300, bbox_inches=\"tight\")"
    ]
   }
  ],
