--- a/docs/examples/example09_joss_paper.ipynb
+++ b/docs/examples/example09_joss_paper.ipynb
@@ -8,9 +8,7 @@
     "\n",
     "*Martin Vonk (2025)*\n",
     "\n",
-    "This notebook reproduces the results from the article submitted to the Journal of Open Source Software ([JOSS](https://joss.theoj.org/)). JOSS is a developer friendly, open access journal for research software packages. JOSS is an academic journal (ISSN 2475-9066) with a formal peer-review process.\n",
-    "\n",
-    "The pre-review and review for the SPEI package are public in issues [openjournals/joss-reviews#8430](https://github.com/openjournals/joss-reviews/issues/8430) and [openjournals/joss-reviews#8454](https://github.com/openjournals/joss-reviews/issues/8454) respectively."
+    "This notebook reproduces the results from the article submitted to the Journal of Open Source Software ([JOSS](https://joss.theoj.org/)). JOSS is a developer friendly, open access and academic journal (ISSN 2475-9066) for research software packages. The journal has a formal peer-review process. The pre-review and review for the SPEI package are public in issues [openjournals/joss-reviews#8430](https://github.com/openjournals/joss-reviews/issues/8430) and [openjournals/joss-reviews#8454](https://github.com/openjournals/joss-reviews/issues/8454) respectively."
    ]
   },
   {
