--- a/docs/examples/example09_joss_paper.ipynb
+++ b/docs/examples/example09_joss_paper.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "*Martin Vonk (2025)*\n",
     "\n",
-    "This notebook reproduces the results from the article submitted to the Journal of Open Source Software ([JOSS](https://joss.theoj.org/)). JOSS is a developer friendly, open access and academic journal (ISSN 2475-9066) for research software packages. The journal has a formal peer-review process. The pre-review and review for the SPEI package are public in issues [openjournals/joss-reviews#8430](https://github.com/openjournals/joss-reviews/issues/8430) and [openjournals/joss-reviews#8454](https://github.com/openjournals/joss-reviews/issues/8454) respectively."
+    "This notebook replicates the results presented in the article submitted to the Journal of Open Source Software ([JOSS](https://joss.theoj.org/)). JOSS is a developer-friendly, open-access academic journal (ISSN 2475-9066) dedicated to research software packages and features a formal peer-review process. The pre-review and review of the SPEI package are publicly available in issues [openjournals/joss-reviews#8430](https://github.com/openjournals/joss-reviews/issues/8430) and [openjournals/joss-reviews#8454](https://github.com/openjournals/joss-reviews/issues/8454), respectively."
    ]
   },
   {
