deploy: 211df51026266ebf0c943938bf289ba188a1e4a5

--- a/examples/example04_package_comparison.ipynb
+++ b/examples/example04_package_comparison.ipynb
@@ -29,10 +29,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-25T09:42:26.960926Z",
-     "iopub.status.busy": "2025-07-25T09:42:26.960672Z",
-     "iopub.status.idle": "2025-07-25T09:42:27.896108Z",
-     "shell.execute_reply": "2025-07-25T09:42:27.895574Z"
+     "iopub.execute_input": "2025-07-25T10:23:00.955497Z",
+     "iopub.status.busy": "2025-07-25T10:23:00.955300Z",
+     "iopub.status.idle": "2025-07-25T10:23:01.972941Z",
+     "shell.execute_reply": "2025-07-25T10:23:01.972394Z"
     }
    },
    "outputs": [
@@ -72,10 +72,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-25T09:42:27.897839Z",
-     "iopub.status.busy": "2025-07-25T09:42:27.897584Z",
-     "iopub.status.idle": "2025-07-25T09:42:28.205609Z",
-     "shell.execute_reply": "2025-07-25T09:42:28.205026Z"
+     "iopub.execute_input": "2025-07-25T10:23:01.974682Z",
+     "iopub.status.busy": "2025-07-25T10:23:01.974444Z",
+     "iopub.status.idle": "2025-07-25T10:23:02.317172Z",
+     "shell.execute_reply": "2025-07-25T10:23:02.316654Z"
     }
    },
    "outputs": [
@@ -104,10 +104,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-25T09:42:28.207269Z",
-     "iopub.status.busy": "2025-07-25T09:42:28.207093Z",
-     "iopub.status.idle": "2025-07-25T09:42:28.345069Z",
-     "shell.execute_reply": "2025-07-25T09:42:28.344424Z"
+     "iopub.execute_input": "2025-07-25T10:23:02.318847Z",
+     "iopub.status.busy": "2025-07-25T10:23:02.318678Z",
+     "iopub.status.idle": "2025-07-25T10:23:02.457966Z",
+     "shell.execute_reply": "2025-07-25T10:23:02.457397Z"
     }
    },
    "outputs": [
@@ -145,10 +145,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-25T09:42:28.346773Z",
-     "iopub.status.busy": "2025-07-25T09:42:28.346568Z",
-     "iopub.status.idle": "2025-07-25T09:42:28.740425Z",
-     "shell.execute_reply": "2025-07-25T09:42:28.739826Z"
+     "iopub.execute_input": "2025-07-25T10:23:02.459669Z",
+     "iopub.status.busy": "2025-07-25T10:23:02.459504Z",
+     "iopub.status.idle": "2025-07-25T10:23:02.858062Z",
+     "shell.execute_reply": "2025-07-25T10:23:02.857533Z"
     }
    },
    "outputs": [
@@ -193,10 +193,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-25T09:42:28.742090Z",
-     "iopub.status.busy": "2025-07-25T09:42:28.741918Z",
-     "iopub.status.idle": "2025-07-25T09:42:29.029257Z",
-     "shell.execute_reply": "2025-07-25T09:42:29.028638Z"
+     "iopub.execute_input": "2025-07-25T10:23:02.859722Z",
+     "iopub.status.busy": "2025-07-25T10:23:02.859556Z",
+     "iopub.status.idle": "2025-07-25T10:23:03.144719Z",
+     "shell.execute_reply": "2025-07-25T10:23:03.144116Z"
     }
    },
    "outputs": [
@@ -361,10 +361,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-25T09:42:29.031049Z",
-     "iopub.status.busy": "2025-07-25T09:42:29.030875Z",
-     "iopub.status.idle": "2025-07-25T09:42:29.033329Z",
-     "shell.execute_reply": "2025-07-25T09:42:29.032868Z"
+     "iopub.execute_input": "2025-07-25T10:23:03.146528Z",
+     "iopub.status.busy": "2025-07-25T10:23:03.146323Z",
+     "iopub.status.idle": "2025-07-25T10:23:03.148865Z",
+     "shell.execute_reply": "2025-07-25T10:23:03.148394Z"
     }
    },
    "outputs": [],
@@ -378,10 +378,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-25T09:42:29.034786Z",
-     "iopub.status.busy": "2025-07-25T09:42:29.034613Z",
-     "iopub.status.idle": "2025-07-25T09:42:29.037362Z",
-     "shell.execute_reply": "2025-07-25T09:42:29.036910Z"
+     "iopub.execute_input": "2025-07-25T10:23:03.150315Z",
+     "iopub.status.busy": "2025-07-25T10:23:03.150162Z",
+     "iopub.status.idle": "2025-07-25T10:23:03.152989Z",
+     "shell.execute_reply": "2025-07-25T10:23:03.152543Z"
     }
    },
    "outputs": [],
@@ -438,10 +438,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-25T09:42:29.038835Z",
-     "iopub.status.busy": "2025-07-25T09:42:29.038655Z",
-     "iopub.status.idle": "2025-07-25T09:42:30.190401Z",
-     "shell.execute_reply": "2025-07-25T09:42:30.189919Z"
+     "iopub.execute_input": "2025-07-25T10:23:03.154501Z",
+     "iopub.status.busy": "2025-07-25T10:23:03.154320Z",
+     "iopub.status.idle": "2025-07-25T10:23:04.266559Z",
+     "shell.execute_reply": "2025-07-25T10:23:04.265875Z"
     }
    },
    "outputs": [
@@ -459,7 +459,7 @@
      "text": [
       "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"LD_LIBRARY_PATH\" redefined by R and overriding existing variable. Current: \"/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib\", R: \"/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib\"\n",
       "  warnings.warn(\n",
-      "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"R_SESSION_TMPDIR\" redefined by R and overriding existing variable. Current: \"/tmp/RtmpXzwkR2\", R: \"/tmp/RtmpzVGKZt\"\n",
+      "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"R_SESSION_TMPDIR\" redefined by R and overriding existing variable. Current: \"/tmp/Rtmpr4EAYG\", R: \"/tmp/RtmpHoFfEY\"\n",
       "  warnings.warn(\n"
      ]
     },
@@ -502,10 +502,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-25T09:42:30.192055Z",
-     "iopub.status.busy": "2025-07-25T09:42:30.191900Z",
-     "iopub.status.idle": "2025-07-25T09:42:30.593799Z",
-     "shell.execute_reply": "2025-07-25T09:42:30.593176Z"
+     "iopub.execute_input": "2025-07-25T10:23:04.268656Z",
+     "iopub.status.busy": "2025-07-25T10:23:04.268479Z",
+     "iopub.status.idle": "2025-07-25T10:23:04.701390Z",
+     "shell.execute_reply": "2025-07-25T10:23:04.700758Z"
     }
    },
    "outputs": [
@@ -585,10 +585,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-25T09:42:30.595567Z",
-     "iopub.status.busy": "2025-07-25T09:42:30.595353Z",
-     "iopub.status.idle": "2025-07-25T09:42:30.910758Z",
-     "shell.execute_reply": "2025-07-25T09:42:30.910181Z"
+     "iopub.execute_input": "2025-07-25T10:23:04.703159Z",
+     "iopub.status.busy": "2025-07-25T10:23:04.702982Z",
+     "iopub.status.idle": "2025-07-25T10:23:05.035923Z",
+     "shell.execute_reply": "2025-07-25T10:23:05.035268Z"
     }
    },
    "outputs": [
@@ -612,10 +612,10 @@
    "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-25T09:42:30.912369Z",
-     "iopub.status.busy": "2025-07-25T09:42:30.912200Z",
-     "iopub.status.idle": "2025-07-25T09:42:30.919907Z",
-     "shell.execute_reply": "2025-07-25T09:42:30.919303Z"
+     "iopub.execute_input": "2025-07-25T10:23:05.037596Z",
+     "iopub.status.busy": "2025-07-25T10:23:05.037416Z",
+     "iopub.status.idle": "2025-07-25T10:23:05.045108Z",
+     "shell.execute_reply": "2025-07-25T10:23:05.044523Z"
     }
    },
    "outputs": [
@@ -742,10 +742,10 @@
    "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-25T09:42:30.921800Z",
-     "iopub.status.busy": "2025-07-25T09:42:30.921605Z",
-     "iopub.status.idle": "2025-07-25T09:42:31.338755Z",
-     "shell.execute_reply": "2025-07-25T09:42:31.338122Z"
+     "iopub.execute_input": "2025-07-25T10:23:05.046689Z",
+     "iopub.status.busy": "2025-07-25T10:23:05.046516Z",
+     "iopub.status.idle": "2025-07-25T10:23:05.465971Z",
+     "shell.execute_reply": "2025-07-25T10:23:05.465390Z"
     }
    },
    "outputs": [
