don't save figures anymore

--- a/docs/examples/example09_joss_paper.ipynb
+++ b/docs/examples/example09_joss_paper.ipynb
@@ -218,7 +218,7 @@
     "\n",
     "axd[\"sp\"].set_xlim(pd.Timestamp(\"1990\"), pd.Timestamp(\"2020\"))\n",
     "\n",
-    "fig.savefig(\"../../paper/figures/monthly_precipitation_surplus.png\", dpi=300, bbox_inches=\"tight\")"
+    "# fig.savefig(\"../../paper/figures/monthly_precipitation_surplus.png\", dpi=300, bbox_inches=\"tight\")"
    ]
   },
   {
@@ -355,7 +355,7 @@
     ")\n",
     "axes_indicator(axd[\"norm\"], \"b\", 0.99, 0.02, ha=\"right\", va=\"bottom\")\n",
     "\n",
-    "fig.savefig(\"../../paper/figures/surplus_fit_cdf.png\", dpi=300, bbox_inches=\"tight\")"
+    "# fig.savefig(\"../../paper/figures/surplus_fit_cdf.png\", dpi=300, bbox_inches=\"tight\")"
    ]
   },
   {
@@ -383,7 +383,7 @@
     "ax.set_xlim(pd.Timestamp(\"1990\"), pd.Timestamp(\"2020\"))\n",
     "ax.set_ylabel(\"Z-score\")\n",
     "\n",
-    "ax.get_figure().savefig(\"../../paper/figures/spei1.png\", dpi=300, bbox_inches=\"tight\")"
+    "# ax.get_figure().savefig(\"../../paper/figures/spei1.png\", dpi=300, bbox_inches=\"tight\")"
    ]
   },
   {
@@ -414,7 +414,8 @@
     "ax.xaxis.set_minor_locator(mpl.dates.YearLocator(1))\n",
     "ax.xaxis.set_major_locator(mpl.dates.YearLocator(2))\n",
     "ax.set_xlim(pd.Timestamp(\"1990\"), pd.Timestamp(\"2020\"))\n",
-    "ax.get_figure().savefig(\"../../paper/figures/spei_heatmap.png\", dpi=300, bbox_inches=\"tight\")"
+    "\n",
+    "# ax.get_figure().savefig(\"../../paper/figures/spei_heatmap.png\", dpi=300, bbox_inches=\"tight\")"
    ]
   },
   {
@@ -452,8 +453,8 @@
     "ax.xaxis.set_minor_locator(mpl.dates.MonthLocator([4, 7, 10]))\n",
     "ax.set_ylabel(\"Precipitation\\nsurplus (mm)\")\n",
     "ax.legend(ncol=3, loc=(0, 1), frameon=False)\n",
-    "# ax.set_ylim(-150.0, 175.0)\n",
-    "fig.savefig(\"../../paper/figures/threshold.png\", dpi=300, bbox_inches=\"tight\")"
+    "\n",
+    "# fig.savefig(\"../../paper/figures/threshold.png\", dpi=300, bbox_inches=\"tight\")"
    ]
   }
  ],
