deploy: bc9edbaf146b6bfc2452ced83bfa7105beb67b00

--- a/examples/example04_package_comparison.ipynb
+++ b/examples/example04_package_comparison.ipynb
@@ -29,10 +29,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-25T10:23:00.955497Z",
-     "iopub.status.busy": "2025-07-25T10:23:00.955300Z",
-     "iopub.status.idle": "2025-07-25T10:23:01.972941Z",
-     "shell.execute_reply": "2025-07-25T10:23:01.972394Z"
+     "iopub.execute_input": "2025-07-25T21:38:01.223039Z",
+     "iopub.status.busy": "2025-07-25T21:38:01.222871Z",
+     "iopub.status.idle": "2025-07-25T21:38:02.164977Z",
+     "shell.execute_reply": "2025-07-25T21:38:02.164348Z"
     }
    },
    "outputs": [
@@ -72,10 +72,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-25T10:23:01.974682Z",
-     "iopub.status.busy": "2025-07-25T10:23:01.974444Z",
-     "iopub.status.idle": "2025-07-25T10:23:02.317172Z",
-     "shell.execute_reply": "2025-07-25T10:23:02.316654Z"
+     "iopub.execute_input": "2025-07-25T21:38:02.166731Z",
+     "iopub.status.busy": "2025-07-25T21:38:02.166464Z",
+     "iopub.status.idle": "2025-07-25T21:38:02.474595Z",
+     "shell.execute_reply": "2025-07-25T21:38:02.473987Z"
     }
    },
    "outputs": [
@@ -104,10 +104,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-25T10:23:02.318847Z",
-     "iopub.status.busy": "2025-07-25T10:23:02.318678Z",
-     "iopub.status.idle": "2025-07-25T10:23:02.457966Z",
-     "shell.execute_reply": "2025-07-25T10:23:02.457397Z"
+     "iopub.execute_input": "2025-07-25T21:38:02.476202Z",
+     "iopub.status.busy": "2025-07-25T21:38:02.476039Z",
+     "iopub.status.idle": "2025-07-25T21:38:02.614378Z",
+     "shell.execute_reply": "2025-07-25T21:38:02.613771Z"
     }
    },
    "outputs": [
@@ -145,10 +145,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-25T10:23:02.459669Z",
-     "iopub.status.busy": "2025-07-25T10:23:02.459504Z",
-     "iopub.status.idle": "2025-07-25T10:23:02.858062Z",
-     "shell.execute_reply": "2025-07-25T10:23:02.857533Z"
+     "iopub.execute_input": "2025-07-25T21:38:02.616024Z",
+     "iopub.status.busy": "2025-07-25T21:38:02.615855Z",
+     "iopub.status.idle": "2025-07-25T21:38:03.006687Z",
+     "shell.execute_reply": "2025-07-25T21:38:03.006065Z"
     }
    },
    "outputs": [
@@ -193,10 +193,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-25T10:23:02.859722Z",
-     "iopub.status.busy": "2025-07-25T10:23:02.859556Z",
-     "iopub.status.idle": "2025-07-25T10:23:03.144719Z",
-     "shell.execute_reply": "2025-07-25T10:23:03.144116Z"
+     "iopub.execute_input": "2025-07-25T21:38:03.008480Z",
+     "iopub.status.busy": "2025-07-25T21:38:03.008304Z",
+     "iopub.status.idle": "2025-07-25T21:38:03.293870Z",
+     "shell.execute_reply": "2025-07-25T21:38:03.293259Z"
     }
    },
    "outputs": [
@@ -361,10 +361,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-25T10:23:03.146528Z",
-     "iopub.status.busy": "2025-07-25T10:23:03.146323Z",
-     "iopub.status.idle": "2025-07-25T10:23:03.148865Z",
-     "shell.execute_reply": "2025-07-25T10:23:03.148394Z"
+     "iopub.execute_input": "2025-07-25T21:38:03.295600Z",
+     "iopub.status.busy": "2025-07-25T21:38:03.295404Z",
+     "iopub.status.idle": "2025-07-25T21:38:03.298022Z",
+     "shell.execute_reply": "2025-07-25T21:38:03.297416Z"
     }
    },
    "outputs": [],
@@ -378,10 +378,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-25T10:23:03.150315Z",
-     "iopub.status.busy": "2025-07-25T10:23:03.150162Z",
-     "iopub.status.idle": "2025-07-25T10:23:03.152989Z",
-     "shell.execute_reply": "2025-07-25T10:23:03.152543Z"
+     "iopub.execute_input": "2025-07-25T21:38:03.299484Z",
+     "iopub.status.busy": "2025-07-25T21:38:03.299322Z",
+     "iopub.status.idle": "2025-07-25T21:38:03.302219Z",
+     "shell.execute_reply": "2025-07-25T21:38:03.301658Z"
     }
    },
    "outputs": [],
@@ -438,10 +438,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-25T10:23:03.154501Z",
-     "iopub.status.busy": "2025-07-25T10:23:03.154320Z",
-     "iopub.status.idle": "2025-07-25T10:23:04.266559Z",
-     "shell.execute_reply": "2025-07-25T10:23:04.265875Z"
+     "iopub.execute_input": "2025-07-25T21:38:03.303810Z",
+     "iopub.status.busy": "2025-07-25T21:38:03.303643Z",
+     "iopub.status.idle": "2025-07-25T21:38:04.548922Z",
+     "shell.execute_reply": "2025-07-25T21:38:04.548435Z"
     }
    },
    "outputs": [
@@ -459,7 +459,7 @@
      "text": [
       "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"LD_LIBRARY_PATH\" redefined by R and overriding existing variable. Current: \"/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib\", R: \"/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib\"\n",
       "  warnings.warn(\n",
-      "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"R_SESSION_TMPDIR\" redefined by R and overriding existing variable. Current: \"/tmp/Rtmpr4EAYG\", R: \"/tmp/RtmpHoFfEY\"\n",
+      "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"R_SESSION_TMPDIR\" redefined by R and overriding existing variable. Current: \"/tmp/RtmpwEtayK\", R: \"/tmp/RtmpxZreq8\"\n",
       "  warnings.warn(\n"
      ]
     },
@@ -502,10 +502,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-25T10:23:04.268656Z",
-     "iopub.status.busy": "2025-07-25T10:23:04.268479Z",
-     "iopub.status.idle": "2025-07-25T10:23:04.701390Z",
-     "shell.execute_reply": "2025-07-25T10:23:04.700758Z"
+     "iopub.execute_input": "2025-07-25T21:38:04.550775Z",
+     "iopub.status.busy": "2025-07-25T21:38:04.550599Z",
+     "iopub.status.idle": "2025-07-25T21:38:04.952491Z",
+     "shell.execute_reply": "2025-07-25T21:38:04.951972Z"
     }
    },
    "outputs": [
@@ -585,10 +585,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-25T10:23:04.703159Z",
-     "iopub.status.busy": "2025-07-25T10:23:04.702982Z",
-     "iopub.status.idle": "2025-07-25T10:23:05.035923Z",
-     "shell.execute_reply": "2025-07-25T10:23:05.035268Z"
+     "iopub.execute_input": "2025-07-25T21:38:04.954197Z",
+     "iopub.status.busy": "2025-07-25T21:38:04.954041Z",
+     "iopub.status.idle": "2025-07-25T21:38:05.268847Z",
+     "shell.execute_reply": "2025-07-25T21:38:05.268314Z"
     }
    },
    "outputs": [
@@ -612,10 +612,10 @@
    "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-25T10:23:05.037596Z",
-     "iopub.status.busy": "2025-07-25T10:23:05.037416Z",
-     "iopub.status.idle": "2025-07-25T10:23:05.045108Z",
-     "shell.execute_reply": "2025-07-25T10:23:05.044523Z"
+     "iopub.execute_input": "2025-07-25T21:38:05.270406Z",
+     "iopub.status.busy": "2025-07-25T21:38:05.270249Z",
+     "iopub.status.idle": "2025-07-25T21:38:05.277528Z",
+     "shell.execute_reply": "2025-07-25T21:38:05.276952Z"
     }
    },
    "outputs": [
@@ -742,10 +742,10 @@
    "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-25T10:23:05.046689Z",
-     "iopub.status.busy": "2025-07-25T10:23:05.046516Z",
-     "iopub.status.idle": "2025-07-25T10:23:05.465971Z",
-     "shell.execute_reply": "2025-07-25T10:23:05.465390Z"
+     "iopub.execute_input": "2025-07-25T21:38:05.279032Z",
+     "iopub.status.busy": "2025-07-25T21:38:05.278881Z",
+     "iopub.status.idle": "2025-07-25T21:38:05.688523Z",
+     "shell.execute_reply": "2025-07-25T21:38:05.688028Z"
     }
    },
    "outputs": [
